<resources>
    <string name="app_name">GetPet</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_label_name"> Name</string>
    <string name="register_label_email"> Email</string>
    <string name="register_label_password"> Password</string>
    <string name="register_label_confirm_password"> Confirm Password</string>
    <string name="register_label_go_back">go back</string>
    <string name="register_label_submit">submit</string>
    <string name="main_label_click_here_to_register">  click here to register  </string>
    <string name="main_label_login">Login</string>
    <string name="main_label_password">Password</string>
    <string name="main_label_email">Email</string>
    <string name="register_label_Error_fill_information">Please fill all the information above</string>
    <string name="register_label_Error_failure_sign_up">Sign up failed, try again</string>
    <string name="main_label_log_in_success">success</string>
    <string name="main_label_failed_log_in">log in failed, try again</string>
    <string name="title_activity_private_area">PrivateAreaActivity</string>
    <string name="private_area_label_title">Private Area</string>
    <string name="private_area_label_my_uploads">My Uploads</string>
    <string name="private_area_label_upload_a_pet">Upload A Pet</string>
    <string name="private_area_label_reset_password">Reset Password</string>
    <string name="private_area_label_change_your_password_title">Change Your Password:</string>
    <string name="private_area_label_email_filling">Email</string>
    <string name="private_area_label_password_filling">Password</string>
    <string name="private_area_label_logout">LogOut</string>
    <string name="private_area_label_back_to_home_page">Back To Home Page</string>
    <string name="upload_a_pet_label_title">Upload a pet</string>
    <string name="upload_a_pet_label_image_of_the_pet_button">+ Image of the pet</string>
    <string name="upload_a_pet_label_kind">Kind</string>
    <string name="upload_a_let_label_age">Age</string>
    <string name="upload_a_pet_label_about">About</string>
    <string name="upload_a_pet_label_phone_to_connect">Phone To Connect</string>
    <string name="upload_a_pet_label_upload_button">Upload</string>
    <string name="upload_a_pet_label_back_to_private_area">Back To Private Area</string>
    <string name="upload_a_pet_label_add_img_btn">+ add image</string>
    <string name="upload_a_pet_upload_btn">upload</string>
    <string name="upload_a_pet_go_back_btn">go back</string>
    <string name="upload_a_pet_label_location">location</string>
    <string name="upload_a_pet_label_owner_name">owner name</string>
    <string name="register_label_show_password">Show Password</string>
    <string name="register_label_show_confirm_password">Show Confirm Password</string>
    <string name="private_area_label_confirm_password">confirm password</string>
    <string name="private_area_label_show_password">show password</string>
    <string name="title_activity_single_post">SinglePostActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Blank Fragment Title</string>
    <string name="main_label_nav_upload_post">upload post</string>
    <string name="main_label_nav_profile">profile</string>
    <string name="main_label_my_posts">my posts</string>
    <string name="main_label_map_fragment">map</string>
    <string name="profile_label_title">Profile</string>
    <string name="profile_picture_description">profile pic</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">save changes</string>
    <string name="profile_label_email">Email</string>
    <string name="add_profile_image">+ profile image</string>
    <string name="map_content_description">Google Map</string>
    <string name="kind_my_card">kind:</string>
    <string name="my_card_age">age:</string>
    <string name="my_card_about">about:</string>
    <string name="my_card_location">location:</string>
    <string name="my_card_phone">phone:</string>
    <string name="my_card_owner">owner:</string>
    <string name="my_card_post_image">post_image</string>
    <string name="edit_card_button_post">Edit</string>
    <string name="edit_profile_btn">edit profile</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="upload_a_pet_kind_spinner">Select A Kind</string>
</resources>