<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cream"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_logo_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/logo_pages"

            />
        <View
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="@color/white" >
        </View>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_a_pet_label_title"
            android:textSize="40sp"
            android:layout_margin="15dp"
            android:fontFamily="@font/handlee"
            android:textStyle="bold"
            >
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.getpet.components.PrimaryButton
                android:id="@+id/upload_pet_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_a_pet_label_add_img_btn" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_height="match_parent">
        <ImageView
            android:background="@drawable/round_img"
            android:id="@+id/post_image"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintDimensionRatio="H, 1:1"
             android:layout_width="0dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>

        <EditText
            android:id="@+id/kind_of_a_pet"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_name"
            android:hint="@string/upload_a_pet_label_kind"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/age_of_a_pet"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_age"
            android:hint="@string/upload_a_let_label_age"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/about_of_a_pet"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_add"
            android:hint="@string/upload_a_pet_label_about"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phone_of_a_pet"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_phone"
            android:hint="@string/upload_a_pet_label_phone_to_connect"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/location_of_a_pet"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_location"
            android:hint="@string/upload_a_pet_label_location"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/owner_of_a_pet"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_name"
            android:hint="@string/upload_a_pet_label_owner_name"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="45dp">


        <com.getpet.components.PrimaryButton
            android:id="@+id/upload_pet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_a_pet_label_upload_button"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            />

        <com.getpet.components.PrimaryButton
            android:id="@+id/go_back_to_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/upload_a_pet_go_back_btn" />



</LinearLayout>



</LinearLayout>