<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:orientation="vertical">

        <!-- Profile Picture ImageView -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="match_parent"
            android:src="@drawable/default_profile"
            android:scaleType="centerCrop"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_picture_description" />
        <ImageButton
            android:id="@+id/change_profile_pic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_add_profile"
            android:background="@color/transparent"
            android:layout_marginTop="-60dp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:text="@string/profile_label_title"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/handlee"
        android:textColor="@color/textColor">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingHorizontal="20dp">
    <TextView
        android:id="@+id/change_a_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/raleway"
        android:text="@string/edit_profile"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold">
    </TextView>
        <EditText
            android:id="@+id/change_email"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/profile_label_email"
            android:textColor="@color/textColor"
            android:fontFamily="@font/raleway"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="6dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <EditText
                android:id="@+id/change_password"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/private_area_label_password_filling"
                android:textColor="@color/textColor"
                android:fontFamily="@font/raleway"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="6dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/showChangePasswordButton"
                android:inputType="textPassword"
                />

            <ImageButton
                android:id="@+id/showChangePasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_horizontal"
                android:background="@android:color/transparent"
                android:contentDescription="@string/register_label_show_password"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_hide_password"
                android:onClick="onShowPasswordClick"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <EditText
                android:id="@+id/change_confirm_password"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/private_area_label_confirm_password"
                android:textColor="@color/textColor"
                android:fontFamily="@font/raleway"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="6dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/showChangeConfirmPasswordButton"
                android:inputType="textPassword"
                />

            <ImageButton
                android:id="@+id/showChangeConfirmPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_horizontal"
                android:background="@android:color/transparent"
                android:contentDescription="@string/register_label_show_password"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_hide_password"
                android:onClick="onShowPasswordClick"/>
        </RelativeLayout>


        <com.getpet.components.PrimaryButton
            android:id="@+id/reset_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/save_changes" />
    </LinearLayout>


        <com.getpet.components.PrimaryButton
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/private_area_label_logout" />

</LinearLayout>