<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cream"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_pages"
        android:adjustViewBounds="true">
    </ImageView>

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@color/white" >
    </View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/private_area_label_title"
        android:textSize="40sp"
        android:layout_margin="25dp"
        android:textStyle="bold"
        android:fontFamily="@font/handlee"
        android:textColor="@color/textColor">
    </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

    <Button
        android:id="@+id/transfer_to_my_upload_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30sp"
        android:background="@drawable/round_button"
        android:text="@string/private_arear_label_my_uploads"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/raleway"
        android:textAllCaps="false">
    </Button>

    <Button
        android:id="@+id/transfer_to_upload_a_pet_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/round_button"
        android:text="@string/private_area_label_upload_a_pet"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/raleway"
        android:textAllCaps="false">
    </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
    <TextView
        android:id="@+id/change_a_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/raleway"
        android:text="@string/private_area_label_change_your_password_title"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold">
    </TextView>

    <EditText
        android:id="@+id/change_email"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:ems="13"
        android:hint="@string/private_area_label_email_filling"
        android:fontFamily="@font/raleway"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:drawableStart="@drawable/ic_email">
    </EditText>

    <EditText
        android:id="@+id/change_password"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:ems="13"
        android:hint="@string/private_area_label_password_filling"
        android:fontFamily="@font/raleway"
        android:drawableStart="@drawable/ic_password"
        >
    </EditText>

    <Button
        android:id="@+id/reset_password_btm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/private_area_label_reset_password"
        android:fontFamily="@font/raleway"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textAllCaps="false">
    </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/round_button"
        android:text="@string/private_area_label_logout"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:fontFamily="@font/raleway"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textAllCaps="false">
    </Button>

    <Button
        android:id="@+id/private_area_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/raleway"
        android:text="@string/private_area_label_back_to_home_page"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false">

    </Button>
    </LinearLayout>

</LinearLayout>